[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2024"

[features]
default = ["parallel", "interactive"]
parallel = ["rayon"]
interactive = ["tui", "crossterm"]

[dependencies]
aoc_2021 = { path = "aoc_2021" }
aoc_2022 = { path = "aoc_2022" }
aoc_2023 = { path = "aoc_2023" }
aoc_2024 = { path = "aoc_2024" }
common = { path = "common" }
pattern_parse = { path = "pattern_parse" }

clap = { version = "4.0.29", features = ["cargo"] }
rayon = { version = "1.6.1", optional = true }
tui = { version = "0.19.0", optional = true }
crossterm = { version = "0.25.0", optional = true }
anyhow = "1.0.75"
thiserror = "1.0.47"
clap_derive = "4.4.2"
