[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
bitflags = "2.4.0"
common = { path = "../common" }
grid = "0.9.0"
pattern_parse = { version = "0.1.0", path = "../pattern_parse" }
rayon = "1.7.0"
thiserror = "1.0.37"
