[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
pattern_parse = { path = "../pattern_parse" }

ahash = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }
grid = "0.9.0"
rayon = "1.7.0"
