[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { version = "0.1.0", path = "../common" }
pattern_parse = { version = "0.1.0", path = "../pattern_parse" }

ahash = { workspace = true }
thiserror = { workspace = true }
nalgebra = { workspace = true }
nom = "7.1.3"
